added docs for users controller
